// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`install check install fail 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "install",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`install check install fail 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "content": "访问后端接口失败，请检查日志",
        "okText": "刷新再试",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`install check reqs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "install",
      },
    ],
    Array [
      Object {
        "method": "get",
        "url": "install",
      },
    ],
    Array [
      Object {
        "method": "get",
        "url": "install",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`install install 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "install",
      },
    ],
    Array [
      Object {
        "data": Object {
          "agree": true,
          "dbDbName": "miaoxing",
          "dbHost": "localhost",
          "dbPassword": "password",
          "dbTablePrefix": "mx_",
          "dbUser": "root",
          "password": "123456",
          "seed": true,
          "username": "admin",
        },
        "loading": true,
        "method": "post",
        "url": "install",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`install submit fail 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "install",
      },
    ],
    Array [
      Object {
        "data": Object {
          "agree": true,
          "dbDbName": "miaoxing",
          "dbHost": "localhost",
          "dbPassword": "password",
          "dbTablePrefix": "mx_",
          "dbUser": "root",
          "password": "123456",
          "seed": undefined,
          "username": "admin",
        },
        "loading": true,
        "method": "post",
        "url": "install",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
